# Ommi

./: .gitignore  AUDIT.md  LICENSE  QUICK_START.md  README.md  REFACTORING_PLAN.md  claude-latest-session.md  driver_test_report.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yaml
docs/: api.md  getting-started.md  index.md
docs/api/: core.md  drivers.md  lazy_fields.md  models.md  overview.md  results.md
docs/guide/: fields.md  models.md  ommi.md  results.md
docs/stylesheets/: extra.css
docs/usage/: association-tables.md  handling-results.md  lazy-fields.md  model-collections.md  models.md
driver-validation-test-suite/: README.md  __init__.py  conftest.py  test_basic_crud.py  test_complex_queries.py  test_relationships.py  test_schema_management.py  test_transactions.py
ommi/: __init__.py  contextual_method.py  database_actions.py  database_statuses.py  driver_context.py  drivers.py  field_metadata.py  model_collections.py  models.py  query_ast.py  shared_types.py  statuses.py
ommi/database/: __init__.py  actions.py  database.py  ommi.py  query_results.py  results.py  transaction.py  transactions.py
ommi/drivers/: __init__.py  add_actions.py  count_actions.py  database_results.py  delete_actions.py  driver_configs.py  driver_types.py  drivers.py  exceptions.py  fetch_actions.py  find_actions.py  schema_actions.py  set_fields_actions.py  transactions.py
ommi/models/: __init__.py  collections.py  field_metadata.py  metadata.py  models.py  query_fields.py  queryable_descriptors.py  references.py
ommi/utils/: awaitable_results.py  get_first.py
planning/: PLANNING_OVERVIEW.md
planning/architecture/: component_overview.md  core_design_principles.md  current_issues_analysis.md  data_flow_patterns.md  driver_interface_pattern.md  proposed_improvements.md  system_architecture.md
planning/documentation/: documentation_plan.md
planning/issues/: critical_issues.md  issue_dependencies.md  lazy_loading_failure.md  query_api_incomplete.md  sqlite_driver_issues.md  type_system_problems.md
planning/roadmap/: development_roadmap.md
planning/testing/: testing_strategy.md
scripts/: gen_ref_pages.py
site/: 404.html  index.html  objects.inv
site/getting-started/: index.html
site/search/: search_index.json
tests/: test_circular_references.py  test_database.py  test_driver_context.py  test_driver_validation.py  test_drivers.py  test_field_metadata.py  test_models.py  test_mongodb_driver.py  test_ommi.py  test_query_fields.py  test_sqlite_driver.py
(+71 files in other folders)
